refactor: make constants